# vohrad_backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  GEMINI.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: security.yml
management/: manage.py
management/commands/: __init__.py  cli_utils.py  format.py  tenant.py  user.py
management/commands/license/: __init__.py  create.py  send_expiry_reminders.py
management/commands/menu/: __init__.py  main_menu.py
management/commands/security/: __init__.py  generate.py  generate_token.py  permission_registry_cli.py  revoke_tokens.py  seed_global_roles.py  seed_tenant_roles.py  utils.py  validate.py
management/commands/tenant/: __init__.py  create.py
management/commands/user/: __init__.py  create.py  create_with_role.py
migrations/: env.py  tenant.py
migrations/versions/: 001_create_shared_schema__81e833.py  002_create_tenant_default_schema__6c5887.py  003_create_tenants_table__464720.py  004_add_missing_tenant_columns__ead5e1.py  005_create_users_table__a5b98c.py  006_create_global_users_table__5ef3b5.py  007_create_rbac__c40f35.py  008_add_tokens_valid_after_fields__b8861c.py  009_add_tenant_business_hours__7ccfcf.py  010_add_lifecycle_to_custom_roles__e531ac.py  011_create_items_table__191f25.py  013_create_item_locations_table__64abac.py  015_create_licenses_table_in_shared_schema__92b6a1.py  017_create_attachments_and_attachables___b0642a.py  add_license_id_to_tenants_table__381b22.py  add_stripe_id_to_tenants__c407f3.py  create_clean_global_rbac__c40f35.py  create_global_users_table__5ef3b5.py  create_item_locations_table__64abac.py  create_licenses_table_in_shared_schema__92b6a1.py  create_locations_table__51e8c0.py
nginx/: nginx.conf
nginx/conf.d/: .gitignore  production.conf
nginx/templates/: README.md  production.conf
scripts/: deploy-aws.sh  start-prod.sh
src/: __init__.py  main.py
src/api/admin/: __init__.py  context.py  dependencies.py  models.py  router.py  schema.py  service.py
src/api/assignment/: __init__.py  models.py
src/api/attachment/: __init__.py  models.py  router.py  schema.py  service.py  storage.py
src/api/auth/: __init__.py  dependencies.py  middleware.py  router.py  schema.py
src/api/auth/admin/: models.py
src/api/auth/assignment/: models.py
src/api/auth/permission/: models.py
src/api/auth/user/: models.py  router.py  service.py
src/api/common/: __init__.py  base_router.py  base_service.py  context_dependencies.py  dependencies.py  router_utils.py  schemas.py  validators.py
src/api/item/: __init__.py  models.py  router.py  schema.py  service.py
src/api/item_location/: __init__.py  models.py  router.py  schema.py  service.py
src/api/license/: __init__.py  models.py  router.py  schema.py  service.py
src/api/location/: __init__.py  models.py  router.py  schema.py  service.py
src/api/permission/: __init__.py  dependencies.py  models.py  router.py  schema.py  service.py
src/api/role/: __init__.py  models.py  router.py  schema.py  service.py
src/api/stripe/: __init__.py  router.py  stripe_payment_service.py  webhook_service.py
src/api/system/: __init__.py  router.py
src/api/tenant/: __init__.py  dependencies.py  models.py  router.py  schema.py  schema_resolver.py  service.py
src/api/user/: __init__.py  models.py  router.py  schema.py  service.py
src/config/: __init__.py  cors.py  jwt.py  keys.py  logging-config.yml  rate_limit.py  settings.py
src/constants/: __init__.py  attachments.py  defaults.py  enums.py  messages.py  validation.py
src/database/: __init__.py  base.py  constraint_handler.py  engine.py  sessions.py
src/database/cache/: __init__.py  interface.py  lru_cache.py  tenant_cache.py  user_cache.py
src/database/seeds/: __init__.py  global_roles.py  tenant_roles.py
src/domain/: __init__.py  subdomain.py
src/exceptions/: __init__.py  application.py  base.py  domain.py  factory.py  infrastructure.py  integration.py  jwt_exceptions.py  registry.py
src/middleware/: __init__.py  auth.py  decorators.py  exception_handler.py  logging_middleware.py
src/observability/: __init__.py  config.py  context.py  filters.py  formatters.py  logger.py
src/security/: __init__.py  key_manager.py  password.py
src/security/authorization/: __init__.py  policy_engine.py  service.py
src/security/jwt/: __init__.py  engine.py  revocation.py  service.py  tokens.py
src/security/policy/: __init__.py  permission_registry.py  policy.py  rbac_policy.py  time_utils.py
src/services/: __init__.py  base_service.py  tenant_service.py
src/services/email/: __init__.py  email_service.py  templates.py
src/utils/: odata_parser.py
src/web/: __init__.py  headers.py  pagination.py  response_factory.py  responses.py
